@@ -1,6 +1,7 @@
 Revision history for Perl extension POE::Component::SSLify.
 
 {{$NEXT}}
+ add informational test that prints out ssleay version
 
 1.009 2014-11-12T00:41:25Z UTC
  - Updates to the auto-generated files
